# altv-esbuild-rust-wasm

./: .gitignore  README.md  dprint.json  package-lock.json  package.json  tsconfig.json
build-src/: plugin.js  types-generator.js
example/: README.md  build.js  dist.js  dprint.json  package-lock.json  package.json  resource.cfg  resource.js  resource.toml  src.js
example/js/: altv_events.js  generation_id.js  helpers.js  init_created_base_objects.js  main.js  resource.js  script_events.js  sourcemap.js
example/rust-server/: Cargo.toml  rustfmt.toml
example/rust-wasm/: Cargo.toml  rust_wasm_bg.wasm
example/rust-wasm/server/: server.toml  start.bat
example/rust-wasm/server/resources/rust/: client.js  resource.toml  server.js
example/rust-wasm/src/: altv_events.rs  any_error.rs  any_void_result.rs  async_executor.rs  base_objects.rs  helpers.rs  id_provider.rs  joaat.rs  lib.rs  logging.rs  panic_handler.rs  result.rs  script_events.rs  timers.rs  vector.rs  wait.rs  wasm_imports.rs
example/rust-wasm/src/base_objects/: any_instance.rs  any_instances.rs  as_base_object_type.rs  attached_to_scope.rs  base_object_js_ref.rs  base_object_type.rs  blip.rs  borrowed_instance.rs  class_traits.rs  detached_player.rs  docs_borrowed.md  docs_borrowed.rs  handle.rs  instance.rs  local_player.rs  manager.rs  player.rs  scope.rs  scoped_instance.rs  sdk_base_object_type.rs  unscoped_instance.rs  vehicle.rs
example/rust-wasm/src/base_objects/class_traits/: entity.rs  local_player.rs  player.rs  vehicle.rs  world_object.rs
example/server/: .altvpkgrc.json  package-lock.json  package.json  server.toml  start.bat
examples/: README.md
src/: const.ts  main.ts
text-encoder/: polyfill.js
(+31 files in other folders)
