[package]
name = "rust-wasm"
version = "0.1.0"
authors = ["xshady <fastik036@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = "0.3.69"
futures = "0.3.30"
web-time = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_repr = "0.1.19"
bincode = "=1.3.3"
erased-serde = "0.4.5"
serde_bytes = "0.11.15"

[profile.release]
# Tell `rustc` to give us best perfomance.
lto = true
opt-level = 3
