[package]
name = "rust-wasm"
version = "0.1.0"
authors = ["xshady <fastik036@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.69"
futures = "0.3.30"
# TODO: make it workspace dependency
serde = { version = "=1.0.203", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_repr = "0.1.19"
bincode = "=1.3.3" # TODO: make it workspace dependency
erased-serde = "0.4.5"
serde_bytes = "0.11.15"
anyhow = "1.0.87"
custom-print = "1.0.0"
thiserror = "1.0.63"

[profile.release]
# Tell `rustc` to give us best perfomance.
lto = true
opt-level = 3

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true
